--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,18 @@ body {
 }
 
 header {
+  background: fixed;
+  width: 1000px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-h1 {
-  font-size: 3em;
-  margin-right: 80px;
+img.center {
+  margin: 0 auto;
+  padding-top: 5px;
+  opacity: 0.6;
+  width: 400px;
+  height: auto;
 }
 
 h2 {
@@ -23,6 +30,7 @@ h2 {
 }
 
 img {
+  max-width: 210px;
 }
 
 .row {
@@ -45,9 +53,7 @@ section {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /*background-color: white;*/
   padding: 0px 10px 0px 10px;
-  /*border: 3px solid green;*/
   margin: 0px 2px 0px 2px;
 }
 
@@ -59,24 +65,24 @@ section {
   align-items: center;
 }
 
-#enemies_available h2 {
-  color: #00890b;
+#opponents_available h2 {
+  color: #8434cc;
 }
 
-.enemy {
-  color: #00890b;
+.opponent {
+  color: #8434cc;
 }
 
-#defender_section h2 {
-  color: #00890b;
+#your_character {
+  color: #c26f0b;
 }
 
-.defender {
-  color: #00890b;
+#defender_section {
+  color: #b10d1b;
 }
 
 #message {
-  color: white;
+  color: #f87575;
   width: 300px;
   font-size: 1.5em;
 }
@@ -89,3 +95,80 @@ button {
   border: 2px solid white;
   padding: 10px 60px 10px 60px;
 }
+
+/* media queries */
+
+/* @media screen and (max-width: 980px) {
+    .hover-rotate {
+      width: 300px;
+      height: 300px;
+    }
+    input {
+      width: 95%;
+      padding: 10px;
+    }
+  
+    textarea {
+      width: 95%;
+      padding: 10px;
+    }
+  
+    #submit {
+      width: 50%;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hover-rotate {
+      width: 200px;
+      height: 200px;
+    }
+    input {
+      width: 95%;
+      padding: 10px;
+    }
+  
+    textarea {
+      width: 95%;
+      padding: 10px;
+    }
+  
+    #submit {
+      width: 50%;
+    }
+  }
+  
+  @media screen and (max-width: 640px) {
+    .hover-rotate {
+      width: 100px;
+      height: 100px;
+    }
+    #logo {
+      float: none;
+      display: block;
+      overflow: auto;
+      width: 100%;
+    }
+    #masthead {
+      position: static;
+      top: 0%;
+    }
+    input {
+      width: 95%;
+      padding: 10px;
+    }
+    nav {
+      float: none;
+      display: block;
+      margin-bottom: 25px;
+      text-align: center;
+    }
+    textarea {
+      width: 95%;
+      padding: 10px;
+    }
+  
+    #submit {
+      width: 50%;
+      position: relative;
+    } */
