--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
   background-size: cover;
   background-position: center center;
   height: 100%;
-  color: antiquewhite;
+  color: #67ce22;
 }
 
 header {
